--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: okxAPI
-Title: Interface to okx API
+Title: Wrapper for [Okx exchange v5 API](https://www.okx.com/docs-v5/en/)
 Version: 0.1.0
 Authors@R: 
     person(family = "Fang", given = "Yongchao", email = "yongchao.fang@outlook.com", role = c("aut", "cre"))
-Description: An interface to the [okx API](https://www.okx.com/docs-v5/en/#overview), including REST API and WebSocket API.
+Description: An unofficial wrapper for [Okx exchange v5 API](https://www.okx.com/docs-v5/en/), including REST API and WebSocket API.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
