--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,5 +9,7 @@ export(restAPItrade)
 export(websocketAPIprivate)
 export(websocketAPIpublic)
 import(R6)
+import(base64enc)
 import(data.table)
 import(httr)
+import(jsonlite)
