--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,5 +11,7 @@ export(websocketAPIpublic)
 import(R6)
 import(base64enc)
 import(data.table)
+import(digest)
 import(httr)
 import(jsonlite)
+import(websocket)
