--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: okxAPI
-Title: An unofficial wrapper for [Okx exchange v5 API](https://www.okx.com/docs-v5/en/)
+Title: An Unofficial Wrapper for [okx Exchange V5 API](Https://Www.okx.com/Docs-V5/en/)
 Version: 0.1.0
 Authors@R: 
-    person(family = "Fang", given = "Yongchao", email = "yongchao.fang@outlook.com", role = c("aut", "cre"))
+    person(family = "Fang", given = "Yongchao", email = "yongchao.fang@outlook.com", role = c("aut", "cre", "cph"))
 Description: An unofficial wrapper for [Okx exchange v5 API](https://www.okx.com/docs-v5/en/), including REST API and WebSocket API.
 License: MIT + file LICENSE
 Encoding: UTF-8
