--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: okxAPI
-Title: An Unofficial Wrapper for [okx Exchange V5 API](Https://Www.okx.com/Docs-V5/en/)
+Title: An Unofficial Wrapper for Okx Exchange V5 API<Https://Www.okx.com/Docs-V5/en/>
 Version: 0.1.0
 Authors@R: 
     person(family = "Fang", given = "Yongchao", email = "yongchao.fang@outlook.com", role = c("aut", "cre", "cph"))
-Description: An unofficial wrapper for [Okx exchange v5 API](https://www.okx.com/docs-v5/en/), including REST API and WebSocket API.
+Description: An unofficial wrapper for [Okx exchange v5 API]<https://www.okx.com/docs-v5/en/>, including REST API and WebSocket API.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
@@ -14,4 +14,5 @@ Imports:
     httr,
     base64enc,
     jsonlite,
-    websocket
+    websocket,
+    digest
